# ISS_Cargo_Management

./: .gitignore  README.md  dockerfile  sfa.json  simple_checker.sh  start.sh
backend/: .gitignore
backend/app/: config.py  models_db.py
backend/generate-dataset/: placement.json  placement_item.csv  rearrangement.json  rearrangement_item.csv  rearrangementt_container.csv
backend/rs-app/: Cargo.toml  new_placement_app.db-shm  new_placement_app.db-wal  placement_app.db-shm  placement_app.db-wal
backend/rs-app/migrations/: 20231120000001_create_tables.sql
backend/rs-app/src/: db_models.rs  handlers.rs  main.rs  models.rs  placement_service.rs
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/app/container/[id]/: page.tsx
frontend/src/app/logs/: page.tsx
frontend/src/app/management/: page.tsx
frontend/src/app/zone/[id]/: page.tsx
frontend/src/components/: ChatBot.css  ChatBot.tsx  ContainerItemViewer3D.tsx  DataTablesTabs.tsx  ISS.tsx  ItemsTable.tsx  ZoomControl.tsx
frontend/src/components/management/: AddContainerModal.tsx  AddItemModal.tsx  ItemsList.tsx
frontend/src/data/: types.ts
