[package]
name = "placement_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # For handling JSON directly if needed
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono"] }
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
env_logger = "0.10"
log = "0.4"
thiserror = "1.0"
anyhow = "1.0"
rand = "0.8"
futures = "0.3" 